# engelguard

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.txt  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.py  run_dashboard.py  run_simulation.sh  run_tests.sh
dashboard/: app.py
dashboard/static/css/: style.css
dashboard/static/js/: main.js
dashboard/templates/: alerts_settings.html  banned_words.html  base.html  commands.html  credentials.html  dashboard.html  filters.html  giveaways.html  login.html  loyalty.html  modlog.html  polls.html  predictions.html  queue_management.html  quotes.html  raid_settings.html  settings.html  shoutout_settings.html  songrequests.html  strikes.html  timers.html  users.html
docs/: COMMANDS.md  COMPARISON.md  INSTALLATION.md  OPERATIONS.md  PROJECT_STATUS.md
scripts/: install.sh  uninstall.sh  update.sh  verify.sh
src/bot/: __init__.py  __main__.py  bot.py  config.py
src/bot/cogs/: __init__.py  admin.py  alerts.py  automod.py  clips.py  customcmds.py  dashboard_bridge.py  fun.py  gambling.py  giveaways.py  info.py  loyalty.py  moderation.py  nuke.py  polls.py  predictions.py  queue.py  quotes.py  raidprotect.py  shoutout.py  songrequests.py  timers.py
src/bot/data/: .gitkeep
src/bot/utils/: __init__.py  database.py  logging.py  permissions.py  spam_detector.py  strikes.py  variables.py
systemd/: twitch-bot.service
tests/: __init__.py  simulate_live_usage.py  test_bot.py  test_dashboard_features.py  test_dashboard_integration.py  test_gambling.py  test_giveaways.py  test_quotes.py  test_race_condition.py  test_songrequests.py
tests/integration/: test_negative_points.py  test_queue_rejoin.py  test_urlfetch_limiting.py
